[project]
name = "rle-assginment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
"torch>=1.12",
"gymnasium[atari,accept-rom-license]==0.28.1",
"pygame==2.1.0",
"tensorboard==2.10.0",
"numpy==1.24.4",
"wandb",
"tensorboard",
"tyro",
"moviepy==1.0.3",
"opencv-python",
"absl-py",
"tensorboardX",
"stable-baselines3",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true